# mancer-vesting

./: .gitignore  ANALYSIS.md  Anchor.toml  BUILD_BRIEF.md  BUILD_PLAN.md  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
clients/ts/: index.ts  leaf.ts  merkle.ts
programs/vesting/: Cargo.toml
programs/vesting/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/vesting/src/instructions/: cancel_campaign.rs  claim.rs  close_claim_record.rs  create_campaign.rs  fund_campaign.rs  get_vested_amount.rs  mod.rs  pause_campaign.rs  update_root.rs  withdraw_unvested.rs
programs/vesting/src/math/: merkle.rs  mod.rs  schedule.rs
programs/vesting/src/state/: claim_record.rs  leaf.rs  mod.rs  vesting_tree.rs
tests/: golden_vector.spec.ts  vesting.spec.ts  vesting.ts
tests/utils/: setup.ts  time.ts
